Bug 464218 - Bevel and Emboss Highlight Mode color not saved with file
Summary: Bevel and Emboss Highlight Mode color not saved with file
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: layer styles (other bugs)
Version First Reported In: 5.1.5
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords:
: 457485 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-12 22:56 UTC by voronwe13
Modified: 2023-03-21 20:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description voronwe13 2023-01-12 22:56:38 UTC
SUMMARY

I have a file with a vector layer (text) that has Layer Style -> Bevel and Emboss enabled, and Highlight Mode set to Screen and was originally a green color.  I made sure to save the image after changing the highlight color.  When I load the image after closing it and/or restarting Krita, the color for the Highlight Mode is reset to white. I've tested and confirmed this happens for both pixel and vector layers.

STEPS TO REPRODUCE
1. Create a layer, draw something on it.
2. Right click layer, go to Layer Styles, enable Bevel and Emboss, and change the color for Highlight Mode
3. Click OK
4. Save image (I've checked saving as .kra and .psd)
5. Close image or exit Krita
6. Re-open image

OBSERVED RESULT
The color for the Highlight Mode is reset to white

EXPECTED RESULT
The color for the Highlight Mode is the same value it was set to when the file was saved.


SOFTWARE/OS VERSIONS
Windows: Krita 5.1.5, Windows 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2023-03-06 11:04:53 UTC
Thank you for the report. I can confirm the issue.
Comment 2 Tiar 2023-03-09 23:08:27 UTC
Git commit e8631c562c511d6b33ea05b93e30000f7ddca852 by Agata Cacko.
Committed on 09/03/2023 at 23:07.
Pushed by tymond into branch 'master'.

Fix color in Bevel and Emboss being forgotten

Before this commit, both Highlight Color and Shadow Color
in Layer Styles -> Bevel and Emboss would be forgotten
after closing the document. This commit ensures that it's properly
written to the file and then read from it.

M  +3    -0    libs/psdutils/asl/kis_asl_xml_parser.cpp

https://invent.kde.org/graphics/krita/commit/e8631c562c511d6b33ea05b93e30000f7ddca852
Comment 3 Tiar 2023-03-21 20:29:01 UTC
*** Bug 457485 has been marked as a duplicate of this bug. ***