Fix color in Bevel and Emboss being forgotten

Before this commit, both Highlight Color and Shadow Color
in Layer Styles -> Bevel and Emboss would be forgotten
after closing the document. This commit ensures that it's properly
written to the file and then read from it.

BUG:464218